# uasi

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: uasi-in-5-minutes.md
lib/: LICENSE  README.md  pyproject.toml
lib/examples/: webhook_demo.py
lib/src/uasi/: __init__.py  canonical.py  keys.py  models.py  signer.py  verifier.py  wellknown.py
lib/src/uasi/bindings/: __init__.py  http.py
lib/tests/: test_uasi.py
schema/: draft-uasi-report-format-00.txt
spec/: draft-uasi-framework-00.txt  draft-uasi-framework-01.txt
