[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uasi"
version = "0.1.0"
description = "Universal Authenticated Sender Identity (UASI) — sign and verify messages across any protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Welén", email = "martin@example.com" },
]
keywords = ["authentication", "dns", "dkim", "webhook", "iot", "mqtt", "security", "signing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/martinwelen/uasi"
Documentation = "https://github.com/martinwelen/uasi#readme"
Repository = "https://github.com/martinwelen/uasi"
Issues = "https://github.com/martinwelen/uasi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uasi"]
